--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   js: ^0.6.7
   flutter_webview_plugin: ^0.4.0
+  device_info_plus: ^9.0.2
 
 dev_dependencies:
   flutter_test:
